<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dark_mode_switch"
        android:title="@string/dark_mode"
        app:actionLayout="@layout/action_bar_switch"
        app:showAsAction="always" />
    <item
        android:id="@+id/set_team_index_dialog"
        android:title="@string/set_team_index" />
    <item
        android:id="@+id/load_tba_matches_dialog"
        android:title="@string/load_tba_matches" />
    <item
        android:id="@+id/load_scout_names_dialog"
        android:title="@string/load_scout_names" />
    <item
        android:id="@+id/load_team_aliases_dialog"
        android:title="@string/load_team_aliases" />
    <item
        android:id="@+id/clear_all_data_dialog"
        android:title="@string/clear_all_settings" />
    <item
        android:id="@+id/about_screen_dialog"
        android:title="@string/about" />

</menu>
