<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000F396B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:textColor="#FF0F396B"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="440dp"
            android:layout_height="378dp"
            android:layout_gravity="center"
            android:contentDescription="@string/our_team_logo"
            android:src="@drawable/t2135_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_team_name"
            android:textSize="18sp"
            android:textColor="#FF0F396B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_team_address"
            android:textSize="18sp"
            android:textColor="#FF0F396B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="#FF0F396B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_original_author"
            android:textSize="18sp"
            android:textColor="#FF0F396B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="18sp"
            android:textColor="#FF0F396B" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
